--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -168,32 +168,32 @@
       <div class="col-lg-6 order-2 order-lg-1">
         <div class="card_items">
           <div class="cardes">
-            <img src="assets/images/1.png" class="img-fluid" />
+            <img src="assets/images/3.png" class="img-fluid" />
             <div class="card_name">
-              <p>Wedding Walls</p>
+              <p>Wedding Events</p>
             </div>
           </div>
 
           <div class="cardes">
-            <img src="assets/images/2.png" class="img-fluid" />
+            <img src="assets/images/1.png" class="img-fluid" />
             <div class="card_name">
-              <p>Metal Circles</p>
+              <p>Corporate Meets</p>
             </div>
           </div>
         </div>
 
         <div class="card_items">
           <div class="cardes">
-            <img src="assets/images/1.png" class="img-fluid" />
+            <img src="assets/images/2.png" class="img-fluid" />
             <div class="card_name">
-              <p>Chairs</p>
+              <p>Birthday</p>
             </div>
           </div>
 
           <div class="cardes">
-            <img src="assets/images/2.png" class="img-fluid" />
+            <img src="assets/images/4.png" class="img-fluid" />
             <div class="card_name">
-              <p>Catering</p>
+              <p>Grand Opening</p>
             </div>
           </div>
         </div>
@@ -219,7 +219,7 @@
 
           <div class="call_button d-flex">
 
-            <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i>+92-09-36789-09</p>
+            <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i><a href="tel:+919363682099" style="color: #ffffff;"> +91 93636 82099</a></p>
           </div>
         </div>
       </div>
@@ -240,15 +240,15 @@
         <div class="upcom">
           <p>UpComing Event</p>
         </div>
-        <div class="up_tit">
-          <p>Welcome Greatest Digital Conference</p>
+        <div class="up_tit mb-3">
+          <p>Welcome to the <br> <span style="color: #7E0086;">River Rumble Blast 2026</span> Spectacle</p>
         </div>
         <div class="up_sup">
-          <p>
+          <p style="text-align: justify;">
             River Rumble Blast 2026 is Pondicherry's biggest New Year celebration
             happening on 31st December at the vibrant Nonakuppam Boathouse Backside Arena, Pondicherry.
             <br>
-          <p>The event features top celebrity, leading singers, influencers, DJs, and
+          <p style="text-align: justify;">The event features top celebrity, leading singers, influencers, DJs, and
             high-energy performances. With 2,500+ expected crowd, premium music setup, entertainment zones, and multiple
             food stalls, this event delivers a high-energy festival vibe and massive brand visibility.
           </p>
@@ -308,8 +308,6 @@
 
 
 
-
-
 <!-- pricing tags start -->
 
 <!-- <div class="pricing-container"> -->
@@ -317,10 +315,10 @@
   <div class="container">
     <div class="row">
       <div class="tites">
-        <p>Plans and Price</p>
+        <p> Choose Your Pass</p>
       </div>
       <div class="subtites">
-        <p>A new and better way to acquire, engage and support customer</p>
+        <p>Pick the perfect experience for River Rumble Blast 2026.</p>
       </div>
     </div>
     <div class="row d-flex align-items-center" style="justify-content: space-around;">
@@ -651,10 +649,9 @@
               <img src="assets/images/foot_logo.png" class="img fluid" width="250px">
             </div>
             <div class="foot_about">
-              <!-- <p>We offer wide variety and exquisite range of Designer Gold Jewellery Sets dexterously created -->
-              <!-- by experienced artisans. Our collection is unique and vast. The exclusive and very vibrant
-                            patterns & designs make our collection the most preferred destination for jewellery lovers. -->
-              <!-- </p> -->
+              <p style="font-weight: 400;"> Aura Elite Events is one of the best event management company, known for
+                delivering creative, ....
+              </p>
             </div>
             <div class="d-none d-lg-block">
               <div class="d-flex align-items-center justify-content-start mt-2" style="gap: 20px;">
@@ -742,7 +739,8 @@
         <p class="footer">Copyright © 2024 AURA Elite Events. All Rights Reserved.</p>
       </div>
       <div class="col-lg-6 designes d-flex align-items-center justify-content-end">
-        <p class="">Designed & Developed by <a style="color: white; font-weight: 400;" href="https://www.salkomdesignstudio.com/">Salkom Design Studio</a>
+        <p class="">Designed & Developed by <a style="color: white; font-weight: 400;"
+            href="https://www.salkomdesignstudio.com/">Salkom Design Studio</a>
         </p>
       </div>
     </div>
