--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -201,10 +201,11 @@
 
       <div class="col-lg-6 order-1 order-lg-2">
         <div class="upcom">
-          <p>Greatest Digital</p>
+          <p>Our Services</p>
         </div>
         <div class="up_tit">
-          <p>Welcome Greatest Digital Conference</p>
+          <p>
+Where Ideas Become High Impact Experiences</p>
         </div>
         <div class="up_sup mt-3">
           <p>
