--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -29,10 +29,12 @@
   <div class="d-flex align-items-start justify-content-center">
     <div class="slider_tet">
       <p style="color: rgb(203, 203, 203)">
-        Kerala's #1 Exclusive Event Company
+       Pondicherry’s #1 Exclusive Event Company
       </p>
       <h1 style="color: white">
-        Partner with Melodia <br />Event Management <br />in Kerala
+       Aura Elite Events<br>
+       <span style="font-size: 28px; font-weight: 500">
+Your partner for seamless high-quality events.</span>
       </h1>
     </div>
   </div>
@@ -205,22 +207,29 @@
         </div>
         <div class="up_tit">
           <p>
-Where Ideas Become High Impact Experiences</p>
+            Where Ideas Become High Impact Experiences</p>
         </div>
         <div class="up_sup mt-3">
-          <p>
-            River Rumble Blast 2026 is Pondicherry's biggest New Year celebration
-            happening on 31st December at the vibrant Nonakuppam Boathouse Backside Arena, Pondicherry.
-            <br>
-          <p>The event features top celebrity, leading singers, influencers, DJs, and
-            high-energy performances. With 2,500+ expected crowd, premium music setup, entertainment zones, and multiple
-            food stalls, this event delivers a high-energy festival vibe and massive brand visibility.
+          <p style="text-align: justify;">
+            Aura Elite Events operates with one clear focus: delivering events that actually stand out. Not recycled
+            templates, not last-minute scrambling deliberate planning, strong creative direction, and tight execution.
+<br>
+            With 100+ events executed across Tamil Nadu and Puducherry, our team has proven expertise in handling
+            everything from intimate gatherings to large-scale productions.
+<br>
+            We design events with a blend of strategy, aesthetics, and technical precision. Every element concept,
+            branding, stage design is handled with the same priority: make
+            the experience unforgettable and the outcome measurable.
+<br>
+            No matter the scale, our team delivers structured planning, clean communication, and flawless on-ground
+            execution.
           </p>
 
 
           <div class="call_button d-flex">
 
-            <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i><a href="tel:+919363682099" style="color: #ffffff;"> +91 93636 82099</a></p>
+            <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i><a href="tel:+919363682099"
+                style="color: #ffffff;"> +91 93636 82099</a></p>
           </div>
         </div>
       </div>
@@ -656,9 +665,13 @@ Where Ideas Become High Impact Experiences</p>
             </div>
             <div class="d-none d-lg-block">
               <div class="d-flex align-items-center justify-content-start mt-2" style="gap: 20px;">
-                <img src="assets/images/f.png" class="img-fluid">
-                <img src="assets/images/y.png" class="img-fluid">
-                <img src="assets/images/i.png" class="img-fluid">
+               <img src="assets/images/f.png" class="img-fluid">
+              <a href="https://wa.me/+91 84381 41202" target="_blank">
+              <img src="assets/images/y.png" class="img-fluid">
+              </a>
+              <a href="https://www.instagram.com/the_aura_elite_events?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+              <img src="assets/images/i.png" class="img-fluid">
+              </a>
               </div>
             </div>
           </div>
@@ -713,8 +726,12 @@ Where Ideas Become High Impact Experiences</p>
           <div class="d-block d-lg-none mb-5">
             <div class="d-flex align-items-center justify-content-start mt-2" style="gap: 20px;">
               <img src="assets/images/f.png" class="img-fluid">
+              <a href="https://wa.me/+91 84381 41202">
               <img src="assets/images/y.png" class="img-fluid">
+              </a>
+              <a href="https://www.instagram.com/the_aura_elite_events?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
               <img src="assets/images/i.png" class="img-fluid">
+              </a>
             </div>
           </div>
         </div>
