--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -13,15 +13,17 @@
                             <a href="#about">
                                 <p>About Us</p>
                             </a>
+                                  <a href="#services">
+                                <p>Services</p>
+                            </a>
                             <a href="#event">
                                 <p>Events</p>
                             </a>
+
                             <a href="#price">
                                 <p>Price</p>
                             </a>
-                            <a href="#contact">
-                                <p>contact Us</p>
-                            </a>
+                      
                         </div>
                     </div>
 
@@ -69,15 +71,16 @@
                     <a href="#about">
                         <p>About Us</p>
                     </a>
+                        <a href="#services">
+                        <p>Services</p>
+                    </a>
                     <a href="#event">
                         <p>Events</p>
                     </a>
                     <a href="#price">
                         <p>Price</p>
                     </a>
-                    <a href="#contact">
-                        <p>contact Us</p>
-                    </a>
+                
                 </div>
                 <div class="call_button">
 
