--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -164,7 +164,7 @@ Your partner for seamless high-quality events.</span>
 
 
 
-<section class="catagery" style="background-color: #fef0ff;padding: 70px 0px 1px 0px;">
+<section class="catagery" id="services" style="background-color: #fef0ff;padding: 70px 0px 1px 0px;">
   <div class="container mb-5">
     <div class="row d-flex align-items-start justify-content-center">
       <div class="col-lg-6 order-2 order-lg-1">
