--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -31,7 +31,7 @@
                         <div class="call_button">
 
                             <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i> <a
-                                    href="tel:+919363682099">+91 9363682099 </a></p>
+                                    href="tel:+919363682099" style="white-space: nowrap;">+91 9363682099 </a></p>
                         </div>
                     </div>
                 </div>
