--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
                 <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-lg-2 d-flex align-items-center justify-content-center"><img
                             src="assets/images/logo.png" class="img-fluid"></div>
-                    <div class="col-lg-8 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-7 col-xl-8 d-flex align-items-center justify-content-center">
                         <div class="navigator">
                             <a>
                                 <p href="#home">Home</p>
@@ -27,7 +27,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2">
+                    <div class="col-lg-3 col-xl-2">
                         <div class="call_button">
 
                             <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i> <a
