--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -318,7 +318,7 @@
 
 .cardes img {
     border-radius: 10px;
-    width: 230px;
+    /* width: 230px; */
 }
 
 .card_name p {
@@ -861,7 +861,7 @@ wrap {
     justify-content: center;
     overflow: hidden;
     position: relative;
-    height: 100vh;
+    height: 100vh; 
     width: 100vw;
 }
 
@@ -1129,7 +1129,7 @@ h3 {
 }
 
 .contens {
-    background-color: #F7ECF9;
+    background-color: #FDF3FF;
 }
 
 .foooter_content_section {
@@ -1184,6 +1184,11 @@ h3 {
 }
 
 @media screen and (min-width: 380px) and (max-width: 768px) {
+
+    .cardes img {
+    border-radius: 10px;
+    width: 230px;
+}
     .banes {
         margin-top: 30px;
     }
@@ -1315,3 +1320,26 @@ a:hover {
 .cardes{
     width: 200px !important;overflow: hidden;
 }
+
+
+@media screen and (min-width:768px) and (max-width:992px) {
+.sece{
+    margin-top: 80px;
+}
+
+.banes{
+    margin-top: 30px;
+}
+.pricing-card{
+margin-top: 20px;
+}
+}
+
+@media screen and (min-width:992px) and (max-width:1200px) {
+
+.pricing-card{
+margin-top: 20px;
+}
+}
+
+
