--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -106,9 +106,9 @@
             <a href="#" class=""><i class="fas fa-play-circle"></i></a>
           </div> -->
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6 sece">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6">
             <div class="feature-box mt-4">
               <div class="feature-box-content text-center">
                 <div class="fbc-btn">
@@ -122,7 +122,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6">
             <div class="feature-box">
               <div class="feature-box-content text-center">
                 <div class="fbc-btn">
@@ -136,7 +136,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6">
             <div class="feature-box">
               <div class="feature-box-content text-center">
                 <div class="fbc-btn">
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6">
             <div class="feature-box active-feature">
               <div class="feature-box-content text-center">
                 <div class="fbc-btn">
@@ -195,7 +195,7 @@
         </div>
 
         <div class="card_items">
-          <div class="cardes">
+          <div class="cardes"> 
             <img src="assets/images/2.png" class="img-fluid" />
             <div class="card_name">
               <p>Birthday</p>
@@ -351,7 +351,7 @@
       class="row d-flex align-items-center"
       style="justify-content: space-around"
     >
-      <div class="col-lg-3">
+      <div class="col-lg-5 col-xl-3 col-md-6">
         <div class="pricing-card popular">
           <div class="inner-glow"></div>
           <div class="card-blur"></div>
@@ -370,7 +370,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-5 col-xl-3 col-md-6">
         <div class="pricing-card">
           <div class="inner-glow"></div>
           <div class="card-blur"></div>
@@ -388,7 +388,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-5 col-xl-3 col-md-6">
         <div class="pricing-card">
           <div class="inner-glow"></div>
           <div class="card-blur"></div>
@@ -406,7 +406,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-5 col-xl-3 col-md-6">
         <div class="pricing-card">
           <div class="inner-glow"></div>
           <div class="card-blur"></div>
@@ -643,7 +643,7 @@
                         >
                           <div class="review-card-img">
                             <img
-                              src="assets/images/man1.png"
+                              src="assets/images/man3.png"
                               class="img-fluid"
                             />
                           </div>
@@ -692,7 +692,7 @@
   <div class="container-fluid contens">
     <div class="foooter_content_section">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4">
           <div class="first_said">
             <div
               class="fotter_logo d-flex align-items-center justify-content-center"
@@ -729,7 +729,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-3 col-sm-6">
           <div class="secound_footer">
             <div class="footer_tit">
               <p>Useful Links</p>
@@ -751,7 +751,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-5 col-sm-6">
           <div class="secound_footer">
             <div class="footer_tit">
               <p>Contact Us</p>
@@ -830,7 +830,7 @@
           Designed & Developed by
           <a
             style="color: white; font-weight: 400"
-            href="https://www.salkomdesignstudio.com/"
+            href="https://www.salkomdesignstudio.com/" target="_blank"
             >Salkom Design Studio</a
           >
         </p>
