--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -28,26 +28,16 @@
       <h1 style="color: white">
         Aura Elite Events<br />
         <span style="font-size: 28px; font-weight: 500">
-          Your partner for seamless high-quality events.</span
-        >
+          Your partner for seamless high-quality events.</span>
       </h1>
     </div>
   </div>
 
-  <div
-    class="slide"
-    style="background-image: url('../../../assets/images/ban-1.png')"
-  ></div>
+  <div class="slide" style="background-image: url('../../../assets/images/ban-1.png')"></div>
 
-  <div
-    class="slide"
-    style="background-image: url('../../../assets/images/ban-2.png')"
-  ></div>
+  <div class="slide" style="background-image: url('../../../assets/images/ban-2.png')"></div>
 
-  <div
-    class="slide"
-    style="background-image: url('../../../assets/images/ban-3.png')"
-  ></div>
+  <div class="slide" style="background-image: url('../../../assets/images/ban-3.png')"></div>
 
   <div class="controls-container">
     <div class="control"></div>
@@ -170,11 +160,7 @@
   </div>
 </section>
 
-<section
-  class="catagery"
-  id="services"
-  style="background-color: #fef0ff; padding: 70px 0px 1px 0px"
->
+<section class="catagery" id="services" style="background-color: #fef0ff; padding: 70px 0px 1px 0px">
   <div class="container mb-5">
     <div class="row d-flex align-items-start justify-content-center">
       <div class="col-lg-6 order-2 order-lg-1">
@@ -195,7 +181,7 @@
         </div>
 
         <div class="card_items">
-          <div class="cardes"> 
+          <div class="cardes">
             <img src="assets/images/2.png" class="img-fluid" />
             <div class="card_name">
               <p>Birthday</p>
@@ -240,10 +226,9 @@
 
           <div class="call_button d-flex">
             <p>
-              <i class="ri-phone-fill" style="padding-right: 10px"></i
-              ><a href="tel:+919363682099" style="color: #ffffff">
-                +91 93636 82099</a
-              >
+              <i class="ri-phone-fill" style="padding-right: 10px"></i><a href="tel:+919363682099"
+                style="color: #ffffff">
+                +91 93636 82099</a>
             </p>
           </div>
         </div>
@@ -347,10 +332,7 @@
         <p>Pick the perfect experience for River Rumble Blast 2026.</p>
       </div>
     </div>
-    <div
-      class="row d-flex align-items-center"
-      style="justify-content: space-around"
-    >
+    <div class="row d-flex align-items-center" style="justify-content: space-around">
       <div class="col-lg-5 col-xl-3 col-md-6">
         <div class="pricing-card popular">
           <div class="inner-glow"></div>
@@ -451,17 +433,12 @@
                   <section class="carousel-wrap">
                     <ul class="carousel">
                       <li class="items main-pos" id="1">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man1.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man1.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
-                            <span class="ra-author">Oscar Owens</span>
+                            <span class="ra-author">Kandane Narayana Swamy</span>
                             <ul class="ra-rating-star">
                               <li><i class="ri-star-s-fill"></i></li>
                               <li><i class="ri-star-s-fill"></i></li>
@@ -483,17 +460,12 @@
                         </div>
                       </li>
                       <li class="items right-pos" id="2">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man2.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man2.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
-                            <span class="ra-author">Helena Baker</span>
+                            <span class="ra-author">Sanjay Sanjay</span>
                             <ul class="ra-rating-star">
                               <li><i class="ri-star-s-fill"></i></li>
                               <li><i class="ri-star-s-fill"></i></li>
@@ -504,27 +476,21 @@
                           </div>
                           <div class="review-content">
                             <p>
-                              Nulla quis lorem ut libero malesuada feugiat.
-                              Quisque velit nisi, pretium ut lacinia in,
-                              elementum id enim. Curabitur aliquet quam id dui
-                              posuere blandit. Lorem ipsum dolor sit amet,
-                              consectetur adipiscing elit.
+                              Exceptional event management by the team.
+                              Every element—from planning to execution—was handled with precision and professionalism.
+                              The coordination, timing, and overall quality were truly commendable.
+                              Outstanding work.”🙌
                             </p>
                           </div>
                         </div>
                       </li>
                       <li class="items back-pos" id="3">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man3.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man3.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
-                            <span class="ra-author">Mark Holden</span>
+                            <span class="ra-author">Sid</span>
                             <ul class="ra-rating-star">
                               <li><i class="ri-star-s-fill"></i></li>
                               <li><i class="ri-star-s-fill"></i></li>
@@ -535,27 +501,21 @@
                           </div>
                           <div class="review-content">
                             <p>
-                              Nulla quis lorem ut libero malesuada feugiat.
-                              Quisque velit nisi, pretium ut lacinia in,
-                              elementum id enim. Curabitur aliquet quam id dui
-                              posuere blandit. Lorem ipsum dolor sit amet,
-                              consectetur adipiscing elit.
+                              “Amazing work by the team!
+                              Super professional, well-coordinated, and perfectly executed.
+                              Every detail was on point — truly a top-class event.
+                              Kudos to the whole team!”
                             </p>
                           </div>
                         </div>
                       </li>
                       <li class="items back-pos" id="4">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man4.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man4.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
-                            <span class="ra-author">Frederick Greer</span>
+                            <span class="ra-author">Sudha Kar</span>
                             <ul class="ra-rating-star">
                               <li><i class="ri-star-s-fill"></i></li>
                               <li><i class="ri-star-s-fill"></i></li>
@@ -566,24 +526,19 @@
                           </div>
                           <div class="review-content">
                             <p>
-                              Nulla quis lorem ut libero malesuada feugiat.
-                              Quisque velit nisi, pretium ut lacinia in,
-                              elementum id enim. Curabitur aliquet quam id dui
-                              posuere blandit. Lorem ipsum dolor sit amet,
-                              consectetur adipiscing elit.
+                              Your idea's are so innovative and creative. The stage design for the conference was
+                              excellent; the backdrop's textured fabric and subtle uplighting created a professional yet
+                              inviting atmosphere. The strategic placement of green plants balanced the space, and the
+                              speaker's podium was perfectly lit, ensuring all attendees could see and hear clearly,
+                              even from the back."
                             </p>
                           </div>
                         </div>
                       </li>
                       <li class="items back-pos" id="5">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man5.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man5.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
                             <span class="ra-author">Jonathan Richards</span>
@@ -607,14 +562,9 @@
                         </div>
                       </li>
                       <li class="items back-pos" id="6">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man6.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man6.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
                             <span class="ra-author">Emma Frazier</span>
@@ -638,14 +588,9 @@
                         </div>
                       </li>
                       <li class="items left-pos" id="7">
-                        <div
-                          class="review-card review-card--option-4 text-center"
-                        >
+                        <div class="review-card review-card--option-4 text-center">
                           <div class="review-card-img">
-                            <img
-                              src="assets/images/man3.png"
-                              class="img-fluid"
-                            />
+                            <img src="assets/images/man3.png" class="img-fluid" />
                           </div>
                           <div class="review-author">
                             <span class="ra-author">Oscar Owens</span>
@@ -694,14 +639,8 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="first_said">
-            <div
-              class="fotter_logo d-flex align-items-center justify-content-center"
-            >
-              <img
-                src="assets/images/foot_logo.png"
-                class="img fluid"
-                width="250px"
-              />
+            <div class="fotter_logo d-flex align-items-center justify-content-center">
+              <img src="assets/images/foot_logo.png" class="img fluid" width="250px" />
             </div>
             <div class="foot_about">
               <p style="font-weight: 400">
@@ -710,18 +649,13 @@
               </p>
             </div>
             <div class="d-none d-lg-block">
-              <div
-                class="d-flex align-items-center justify-content-start mt-2"
-                style="gap: 20px"
-              >
+              <div class="d-flex align-items-center justify-content-start mt-2" style="gap: 20px">
                 <img src="assets/images/f.png" class="img-fluid" />
                 <a href="https://wa.me/+91 84381 41202" target="_blank">
                   <img src="assets/images/y.png" class="img-fluid" />
                 </a>
-                <a
-                  href="https://www.instagram.com/the_aura_elite_events?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                  target="_blank"
-                >
+                <a href="https://www.instagram.com/the_aura_elite_events?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                  target="_blank">
                   <img src="assets/images/i.png" class="img-fluid" />
                 </a>
               </div>
@@ -763,35 +697,25 @@
               </p>
               <p>
                 <span>Mail:</span>
-                <a
-                  href="mailto:auraeliteevents@gmail.com"
-                  style="color: #2b2130"
-                >
-                  auraeliteevents&#64;gmail.com</a
-                >
+                <a href="mailto:auraeliteevents@gmail.com" style="color: #2b2130">
+                  auraeliteevents&#64;gmail.com</a>
               </p>
 
               <p>
                 <span>Phone:</span>
                 <a href="tel:+919363682099" style="color: #2b2130">
-                  +91 93636 82099</a
-                >
+                  +91 93636 82099</a>
               </p>
             </div>
           </div>
           <div class="d-block d-lg-none mb-5">
-            <div
-              class="d-flex align-items-center justify-content-start mt-2"
-              style="gap: 20px"
-            >
+            <div class="d-flex align-items-center justify-content-start mt-2" style="gap: 20px">
               <img src="assets/images/f.png" class="img-fluid" />
               <a href="https://wa.me/+91 84381 41202">
                 <img src="assets/images/y.png" class="img-fluid" />
               </a>
-              <a
-                href="https://www.instagram.com/the_aura_elite_events?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                target="_blank"
-              >
+              <a href="https://www.instagram.com/the_aura_elite_events?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                target="_blank">
                 <img src="assets/images/i.png" class="img-fluid" />
               </a>
             </div>
@@ -802,13 +726,8 @@
           <div class="map" style="border-radius: 20px">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.096802209068!2d79.80318079999999!3d11.8983475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5361c33622170f%3A0xa5faaa62db2d661!2s18%2C%20East%20Coast%20Rd%2C%20Ariyankuppam%2C%20Puducherry%20605007!5e0!3m2!1sen!2sin!4v1765344216924!5m2!1sen!2sin"
-              width="100%"
-              height="250"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+              width="100%" height="250" style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -823,16 +742,11 @@
           Copyright © 2024 AURA Elite Events. All Rights Reserved.
         </p>
       </div>
-      <div
-        class="col-lg-6 designes d-flex align-items-center justify-content-end"
-      >
+      <div class="col-lg-6 designes d-flex align-items-center justify-content-end">
         <p class="">
           Designed & Developed by
-          <a
-            style="color: white; font-weight: 400"
-            href="https://www.salkomdesignstudio.com/" target="_blank"
-            >Salkom Design Studio</a
-          >
+          <a style="color: white; font-weight: 400" href="https://www.salkomdesignstudio.com/" target="_blank">Salkom
+            Design Studio</a>
         </p>
       </div>
     </div>
