--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<!-- GLOBAL LOADER -->
+<div class="over_all_loader" *ngIf="showLoader">
+  <div class="loader">
+    <div class="inner"></div>
+  </div>
+</div>
 
+<!-- APP CONTENT -->
 <app-header></app-header>
-<router-outlet />
+
+<router-outlet></router-outlet>
+
+<!-- <app-footer></app-footer> -->
