--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,120 +1,87 @@
-/* body {
-	height: 100vh;
-	display: grid;
-	place-items: center;
-} */
- .over_all_loader{
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0px;
-    left: 0px;z-index: 99999;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
+/* 🔹 Loader wrapper + CSS variables */
+.over_all_loader {
+  --size: calc(100vw / 5);
+  --neon: #d2008c;
+  --background: black;
+  --timer: 1s;
 
-body.dark {
-	background: #222;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  inset: 0;
+  z-index: 99999;
+  background: black;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: calc(1.75vw + 1.75vh);
 }
 
-body.dark .loader {
-	--background: #222;
+/* Center content */
+.loader-wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Animation */
+@keyframes animate {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
 .loader {
-	--speed: 5s;
-	--size: 100px;
-	--background: #FFF;
-	
-	height: var(--size);
-	aspect-ratio: 1;
-	position: relative;
-	filter: url(#round);
+  position: absolute;
+  width: var(--size);
+  height: var(--size);
+  animation: animate calc(var(--timer) * 3) linear infinite;
 }
 
-.loader > div {
-	position: absolute;
-	inset: 0;
-	z-index: 10;
-	filter: blur(calc(0.075 * var(--size)));
+.loader span {
+  position: absolute;
+  inset: calc(var(--size) * 0.1);
+  background: var(--background);
+  border-radius: 50%;
 }
 
-.loader::before,
-.loader::after,
-.loader > div::before {
-	content: '';
-	display: block;
-	inset: 0;
-	position: absolute;
-/* 	clip-path: polygon(57% 97%, 22% 69%, 4% 43%, 45% 1%, 71% 20%, 100% 53%); */
-/* 	clip-path: polygon(50% 84%, 10% 80%, 10% 18%, 50% 15%, 92% 18%, 92% 80%); */
-/* 	clip-path: polygon(67% 78%, 39% 94%, 3% 48%, 28% 25%, 62% 0, 100% 50%); */
-/* 	clip-path: polygon(100% 56%, 58% 99%, 25% 69%, 1% 41%, 43% 0, 71% 23%); */
-/* 	clip-path: polygon(100% 54%, 67% 80%, 32% 95%, 1% 43%, 33% 21%, 70% 1%); */
-/* 	clip-path: polygon(91% 20%, 91% 76%, 50% 88%, 10% 78%, 10% 20%, 50% 13%); */
-/* 	clip-path: polygon(65% 2%, 100% 45%, 71% 78%, 38% 97%, 0 51%, 27% 17%); */
-/* 	clip-path: polygon(50% 16%, 84% 16%, 84% 81%, 50% 81%, 18% 81%, 18% 16%); */
-	animation: rotate var(--speed) infinite linear both;
+div[class*='segment']::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(to top, transparent, var(--neon));
+  background-repeat: no-repeat;
+  border-top-left-radius: calc(var(--size) * 0.5);
+  border-bottom-left-radius: calc(var(--size) * 0.5);
 }
 
-/* Stroke */
-.loader::before {
-	background: linear-gradient(-45deg, #FC75BC, #FB60FC);
+.segment1 { animation-delay: 0s; }
+.segment2 { animation-delay: calc(var(--timer) * -1); }
+.segment3 { animation-delay: calc(var(--timer) * -2); }
+
+.loader i {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(var(--size) * 0.1);
+  height: calc(var(--size) * 0.1);
+  background: var(--neon);
+  border-radius: 50%;
+  box-shadow:
+    0 0 calc(var(--size) * 0.1) var(--neon),
+    0 0 calc(var(--size) * 0.3) var(--neon),
+    0 0 calc(var(--size) * 0.5) var(--neon);
 }
 
-/* Inner Shadow */
-.loader::after {
-	display: none;
-	background: linear-gradient(-45deg, #FC75BC, #FB60FC);
-	inset: 4%;
-}
-
-.loader > div:before {
-	background: var(--background);
-	inset: 5%;
-}
-
-@keyframes rotate {
-	0% {
-		clip-path: polygon(18% 82%, 18% 16%, 50% 16%, 84% 16%, 84% 82%, 50% 82%);
-	}
-
-	12.5% {
-		clip-path: polygon(50% 84%, 10% 80%, 10% 18%, 50% 15%, 92% 18%, 92% 80%);
-	}
-
-	25% {
-		clip-path: polygon(57% 97%, 22% 69%, 4% 43%, 45% 1%, 71% 20%, 100% 53%);
-	}
-	
-	37.5% {
-/* 		clip-path: polygon(67% 78%, 39% 94%, 3% 48%, 28% 25%, 62% 0, 100% 50%); */
-		clip-path: polygon(65% 75%, 39% 94%, 3% 48%, 28% 25%, 59% 4%, 95% 44%);
-	}
-
-	50% {
-/* 		clip-path: polygon(100% 56%, 58% 99%, 25% 69%, 1% 41%, 43% 0, 71% 23%); */
-		clip-path: polygon(96% 52%, 55% 96%, 25% 69%, 3% 44%, 45% 3%, 70% 24%);
-	}
-	
-	62.5% {
-		clip-path: polygon(100% 54%, 67% 80%, 32% 95%, 1% 43%, 33% 21%, 70% 1%);
-	} 
-	
-	75% {
-		clip-path: polygon(91% 20%, 91% 76%, 50% 88%, 10% 78%, 10% 20%, 50% 13%);
-	}
-	
-	87.5% {
-		clip-path: polygon(65% 2%, 100% 45%, 71% 78%, 38% 97%, 0 51%, 27% 17%);
-	}
-	
-	100% {
-		clip-path: polygon(50% 16%, 84% 16%, 84% 81%, 50% 81%, 18% 81%, 18% 16%);
-	}
-}
-.over_all_loader {
-  transition: opacity 0.4s ease;
+p {
+  margin-top: calc(var(--size) * 1.5);
+  color: gold;
+  text-align: center;
 }
