--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,21 @@
 <!-- GLOBAL LOADER -->
 <div class="over_all_loader" *ngIf="showLoader">
-  <div class="loader-wrap">
-    <div class="loader segment1"><span></span><i></i></div>
-    <div class="loader segment2"><span></span><i></i></div>
-    <div class="loader segment3"><span></span><i></i></div>
-    <p>⇦ The Aura Elite Events ⇨</p>
+<main>
+  <div id="cyber-loader">
+    <div class="datastream">
+      <div class="bar bar-1"></div>
+      <div class="bar bar-2"></div>
+      <div class="bar bar-3"></div>
+      <div class="bar bar-4"></div>
+      <div class="bar bar-5"></div>
+      <div class="bar bar-6"></div>
+      <div class="bar bar-7"></div>
+      <div class="bar bar-8"></div>
+    </div>
+    <div class="loader-text">The Aura Elite Events</div>
   </div>
+</main>
+
 </div>
 
 <!-- APP CONTENT -->
