--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -333,7 +333,7 @@
       </div>
     </div>
     <div class="row d-flex align-items-center" style="justify-content: space-around">
-      <div class="col-lg-5 col-xl-3 col-md-6">
+      <div class="col-lg-5 col-xl-4 col-md-6">
         <div class="pricing-card popular">
           <div class="inner-glow"></div>
           <div class="card-blur"></div>
@@ -351,7 +351,7 @@
           <button class="cta-button" style="width: 100%">Call Now</button>
         </div>
       </div>
-
+<!-- 
       <div class="col-lg-5 col-xl-3 col-md-6">
         <div class="pricing-card">
           <div class="inner-glow"></div>
@@ -404,7 +404,7 @@
           </ul>
           <button class="cta-button" style="width: 100%">Call Now</button>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
@@ -739,7 +739,7 @@
     <div class="row">
       <div class="col-lg-6">
         <p class="footer">
-          Copyright © 2024 AURA Elite Events. All Rights Reserved.
+          Copyright © 2025 AURA Elite Events. All Rights Reserved.
         </p>
       </div>
       <div class="col-lg-6 designes d-flex align-items-center justify-content-end">
