--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,7 +24,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  background: #fffcf0;
   display: flex;
   flex-direction: column;
   align-items: center;
